updated the image name

--- a/cal-deployment.yaml
+++ b/cal-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: calendar-app
-          image: ari786/calendar:latest
+          image: ari786/calendar:v1
           ports:
             - containerPort: 80
 
